# azarole-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  azarole-config-sample.toml  docker-compose.yml
.github/workflows/: rust.yml
docker/alpine/: Dockerfile
docker/amazonlinux/: Dockerfile
docker/dev/: azarole-config.toml
src/: app.rs  args.rs  azarole.rs  config.rs  context.rs  errors.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  repositories.rs  secrets.rs
src/app/: config.rs  context.rs
src/handlers/: api.rs  api_keys.rs  attendance_records.rs  auth.rs  current_user.rs  signout.rs  views.rs  workplaces.rs
src/handlers/api/: attendance_registration.rs
src/handlers/api_keys/: registration.rs
src/handlers/attendance_records/: listing.rs
src/handlers/auth/: access_token_request.rs  authentication_request.rs  google_jwks.rs  id_token_verifier.rs  user_finder.rs
src/middlewares/: require_api_key.rs  require_signin.rs
src/middlewares/require_api_key/: api_key_authenticator.rs
src/models/: api_key.rs  api_key_authenticator.rs  attendance_record.rs  attendance_registration.rs  mod.rs  user.rs  workplace.rs
src/repositories/: api_key.rs  attendance_record.rs  user.rs  workplace.rs
tests/: api_keys_test.rs  api_test.rs  attendance_records_test.rs  current_user_test.rs  workplaces_test.rs
tests/common/: mod.rs
tests/fixtures/: api_keys.sql  attendance_records.sql  users.sql  workplaces.sql
