[package]
name = "azarole"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2024"

[[bin]]
name = "azarole"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-service = "2.0.3"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
actix-web-validator = "7.0.0"
anyhow = "~1.0.100"
base64 = "~0.22.1"
clap = { version = "~4.5.53", features = ["derive"] }
chrono = { version = "~0.4.42", features = ["serde"] }
chrono-tz = "~0.10.4"
env_logger = "~0.11.8"
envy = "~0.4.2"
futures-util = "~0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
hex = "~0.4.3"
hmac = "~0.12.1"
log = "~0.4.29"
rand = "~0.9.2"
reqwest = { version = "0.12.26", features = ["json"] }
serde = "~1.0.228"
serde_derive = "~1.0.226"
serde_json = "~1.0.145"
sha2 = "~0.10.9"
sqlx = { version = "~0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
thiserror = "~2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "~0.9.10"
url = "~2.5.7"
validator = { version = "~0.20.0", features = ["derive"] }
